tests/rosetta/out/Haskell/arithmetic-rational.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/arithmetic-rational.hs:143:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/arithmetic-rational.hs:136:1
                 /workspace/mochi/tests/rosetta/out/Haskell/arithmetic-rational.hs:143:1
    |
143 | main = do
    | ^^^^
