tests/rosetta/out/Haskell/arithmetic-rational.hs
-- Generated by Mochi compiler v0.10.26 on 2025-07-16T09:31:22Z
-- Code generated by Mochi compiler; DO NOT EDIT.
{-# LANGUAGE DeriveGeneric #-}

module Main where

import Data.List (intercalate, isInfixOf, isPrefixOf)
import qualified Data.List as List
import Data.Maybe (fromMaybe)

forLoop :: Int -> Int -> (Int -> Maybe a) -> Maybe a
forLoop start end f = go start
  where
    go i
      | i < end =
          case f i of
            Just v -> Just v
            Nothing -> go (i + 1)
      | otherwise = Nothing

whileLoop :: (() -> Bool) -> (() -> Maybe a) -> Maybe a
whileLoop cond body = go ()
  where
    go _
      | cond () =
          case body () of
            Just v -> Just v
            Nothing -> go ()
      | otherwise = Nothing

avg :: (Integral a) => [a] -> a
avg xs
  | null xs = 0
  | otherwise = div (sum xs) (fromIntegral (length xs))

data MGroup k a = MGroup {key :: k, items :: [a]} deriving (Show)

_group_by :: (Ord k) => [a] -> (a -> k) -> [MGroup k a]
_group_by src keyfn =
  let go [] m order = (m, order)
      go (x : xs) m order =
        let k = keyfn x
         in case Map.lookup k m of
              Just is -> go xs (Map.insert k (is ++ [x]) m) order
              Nothing -> go xs (Map.insert k [x] m) (order ++ [k])
      (m, order) = go src Map.empty []
   in [MGroup k (fromMaybe [] (Map.lookup k m)) | k <- order]

_indexString :: String -> Int -> String
_indexString s i =
  let idx = if i < 0 then i + length s else i
   in if idx < 0 || idx >= length s
        then error "index out of range"
        else [s !! idx]

_append :: [a] -> a -> [a]
_append xs x = xs ++ [x]

_input :: IO String
_input = getLine

_readInput :: Maybe String -> IO String
_readInput Nothing = getContents
_readInput (Just p)
  | null p || p == "-" = getContents
  | otherwise = readFile p

_writeOutput :: Maybe String -> String -> IO ()
_writeOutput mp text = case mp of
  Nothing -> putStr text
  Just p
    | null p || p == "-" -> putStr text
    | otherwise -> writeFile p text

_split :: Char -> String -> [String]
_split _ "" = [""]
_split d s =
  let (h, t) = break (== d) s
   in h : case t of
        [] -> []
        (_ : rest) -> _split d rest

_parseCSV :: String -> Bool -> Char -> [Map.Map String String]
_parseCSV text header delim =
  let ls = filter (not . null) (lines text)
   in if null ls
        then []
        else
          let heads =
                if header
                  then _split delim (head ls)
                  else ["c" ++ show i | i <- [0 .. length (_split delim (head ls)) - 1]]
              start = if header then 1 else 0
              row line =
                let parts = _split delim line
                 in Map.fromList
                      [ (heads !! j, if j < length parts then parts !! j else "")
                        | j <- [0 .. length heads - 1]
                      ]
           in map row (drop start ls)

data AnyValue = VInt Int | VDouble Double | VString String | VBool Bool deriving (Show)

_asInt :: AnyValue -> Int
_asInt (VInt n) = n
_asInt v = error ("expected int, got " ++ show v)

_asDouble :: AnyValue -> Double
_asDouble (VDouble d) = d
_asDouble v = error ("expected double, got " ++ show v)

_asString :: AnyValue -> String
_asString (VString s) = s
_asString v = error ("expected string, got " ++ show v)

_asBool :: AnyValue -> Bool
_asBool (VBool b) = b
_asBool v = error ("expected bool, got " ++ show v)

_showAny :: AnyValue -> String
_showAny (VInt n) = show n
_showAny (VDouble d) = show d
_showAny (VString s) = s
_showAny (VBool b) = if b then "true" else "false"

intSqrt :: Int -> Int
intSqrt x = fromMaybe (0) $
  case if (_asInt (x) < 2) then Just (x) else Nothing of Just v -> Just v; Nothing -> (let left = 1 in (let right = (div x 2) in (let ans = 0 in case whileLoop (\() -> (left <= right)) (\() -> (let mid = (div (left + ((right - left))) 2) in (let sq = (mid * mid) in case if (sq == x) then Just (mid) else Nothing of Just v -> Just v; Nothing -> if (sq < x) then (let left = (_asInt (mid) + 1) in (let ans = mid in Nothing)) else (let right = (_asInt (mid) - 1) in Nothing)))) of Just v -> Just v; Nothing -> Just (ans))))

sumRecip :: Int -> Int
sumRecip n =
  fromMaybe (0) $
    (let s = 1 in (let limit = intSqrt n in (let f = 2 in case whileLoop (\() -> (f <= limit)) (\() -> case if ((n `mod` f) == 0) then (let s = ((s + n) / f) in (let f2 = (n / f) in if (f2 /= f) then (let s = (s + f) in Nothing) else Nothing)) else Nothing of Just v -> Just v; Nothing -> (let f = (_asInt (f) + 1) in Nothing)) of Just v -> Just v; Nothing -> Just (s))))

main :: ()
main =
  fromMaybe (()) $
    (let nums = [6, 28, 120, 496, 672, 8128, 30240, 32760, 523776] in foldr (\n acc -> case (let s = sumRecip n in if ((s `mod` n) == 0) then (let val = (s / n) in (let perfect = "" in case if (_asInt (val) == 1) then (let perfect = "perfect!" in Nothing) else Nothing of Just v -> Just v; Nothing -> (let _ = putStrLn (_showAny (((((("Sum of recipr. factors of " ++ show n) ++ " = ") ++ show val) ++ " exactly ") + perfect))) in Nothing))) else Nothing) of Just v -> Just v; Nothing -> acc) Nothing nums)
  where
    nums = [6, 28, 120, 496, 672, 8128, 30240, 32760, 523776]

main :: IO ()
main = do
  main
